tests/specs/infer_function_assignment.txt
# mod.ts
export function foo(n = 0, b: string = 0) {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export function foo(n = 0, b: string = 0) {}
  | ^

# output.txt
Defined in file:///mod.ts:0:1

function foo(n: number, b: string): void


# output.json
{
  "symbols": [
    {
      "name": "foo",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 0,
            "byteIndex": 0
          },
          "declarationKind": "export",
          "kind": "function",
          "def": {
            "params": [
              {
                "kind": "assign",
                "left": {
                  "kind": "identifier",
                  "name": "n",
                  "optional": false,
                  "tsType": {
                    "repr": "number",
                    "kind": "keyword",
                    "value": "number"
                  }
                },
                "right": "0"
              },
              {
                "kind": "assign",
                "left": {
                  "kind": "identifier",
                  "name": "b",
                  "optional": false,
                  "tsType": {
                    "repr": "string",
                    "kind": "keyword",
                    "value": "string"
                  }
                },
                "right": "0"
              }
            ],
            "returnType": {
              "repr": "void",
              "kind": "keyword",
              "value": "void"
            },
            "hasBody": true
          }
        }
      ]
    }
  ]
}
